# PomodoroScreen

./: .cursorrules  .gitignore  BUILD.md  BUILD_INSTRUCTIONS.md  CHANGELOG_v1.0.1.md  CHANGELOG_v1.0.2.md  IDLE_VS_PAUSE_ANALYSIS.md  Makefile  PomodoroScreen状态转换图.md  README for developer.md  README.md  RELEASE.md  RELEASE_NOTES_v1.0.0.md  SCRIPTS.md  STATE_BEHAVIOR_TABLE.md  build-universal.sh  build.sh  buildServer.json  ci-build.sh  default.profraw  iOS开关修复说明.md  ops.md  quick-build.sh  run_screen_detection_tests.sh  test_demo.swift  version.sh  代码变更-倒计时按钮字体.md  代码变更清单-唤醒刷新状态栏.md  代码变更清单-遮罩层倒计时按钮.md  休息时间显示一致性修复.md  会议模式功能说明.md  健康报告.md  健康环统计维度与计算公式.md  字体加载问题修复总结.md  屏幕检测功能测试说明.md  系统唤醒刷新状态栏修复.md  系统睡眠功能实现.md  自动检测投屏功能说明.md  自动检测投屏测试总结.md
PomodoroScreen/: AppDelegate.swift  AutoRestartStateMachine.swift  ClockIconGenerator.swift  CountdownNotificationWindow.swift  HealthRingsView.swift  LaunchAtLogin.swift  OverlayWindow.swift  PomodoroScreen.entitlements  PomodoroStateMachine.swift  PomodoroTimer.swift  ReportWindow.swift  ScreenDetectionManager.swift  SettingsWindow.swift  StatisticsDatabase.swift  StatisticsManager.swift  StatisticsModels.swift  StatusBarController.swift  StatusBarPopupWindow.swift  动态布局使用说明.md
PomodoroScreen.xcodeproj/: project.pbxproj  project.pbxproj.backup
PomodoroScreenTests/: AutoRestartStateMachineTests.swift  AutomatedTestRunner.swift  BreakCountRecordingTests.swift  BreakMessageTests.swift  BreakRecordingIntegrationTests.swift  CountdownButtonTests.swift  CountdownNotificationTests.swift  CountdownWarningTests.swift  IconSnapshotTests.swift  (+26 more)
Windows/: CMakeLists.txt  README.md  build.bat
Windows/src/: AutoRestartStateMachine.cpp  AutoRestartStateMachine.h  BackgroundSettingsWin32.cpp  BackgroundSettingsWin32.h  DpiUtilsWin32.h  MainWindowWin32.cpp  MainWindowWin32.h  MultiScreenOverlayManagerWin32.cpp  MultiScreenOverlayManagerWin32.h  OverlayWindowWin32.cpp  OverlayWindowWin32.h  PomodoroTimer.cpp  PomodoroTimer.h  SettingsWindowWin32.cpp  SettingsWindowWin32.h  TrayIconWin32.cpp  TrayIconWin32.h  TrayPopupWindowWin32.cpp  TrayPopupWindowWin32.h  main.cpp
(+47 files in other folders)
